@startuml
entity User {
  id: int PK
  username: string
  password_hash: string
  role: string
}
entity Student {
  id: int PK
  name: string
  email: string
  course: string
  hostel_id: int FK
  room_id: int FK
}
entity Hostel {
  id: int PK
  name: string
  type: string
  capacity: int
}
entity Room {
  id: int PK
  room_number: string
  hostel_id: int FK
  bed_count: int
  occupied_beds: int
}
entity Complaint {
  id: int PK
  student_id: int FK
  description: text
  status: string
  timestamp: datetime
}
Hostel ||--o{ Room
Hostel ||--o{ Student
Room ||--o{ Student
Student ||--o{ Complaint
@enduml